0.12.2dev: Avoid wrapping action links in the table of report page.
Closes #9436.


git-svn-id: http://trac.edgewall.org/intertrac/log:/branches/0.12-stable@10506 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/report.css
+++ b/trac/htdocs/css/report.css
@@ -84,6 +84,7 @@ h2.report-result {
 /* Styles for the report list and the report results table
    (extends the styles for "table.listing") */
 .reports td.title { width: 100%; white-space: normal; }
+.reports td.action { white-space: nowrap; }
 .tickets tbody:first-child tr.trac-group h2 { margin-top: 0; }
 .tickets tr.trac-group { border: none; }
 .tickets tr.trac-group:hover { background: none !important; }
